--- a/seds_website/outteam.html
+++ b/seds_website/outteam.html
@@ -1,203 +1,1 @@
-<!DOCTYPE html>
-<html>
-    
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=0.8">
-    <title>SEDS-VITAP</title>
-    <script src="jquery-1.11.3.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <link rel="icon" href="images/logo (2).png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="main.css">
-    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>
-    <style>
-        *{
-
-    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 2s; /* Firefox < 16 */
-        -ms-animation: fadein 2s; /* Internet Explorer */
-         -o-animation: fadein 2s; /* Opera < 12.1 */
-            animation: fadein 2s;
-}
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-    </style>
-
-</head>
-<body style="background: rgba(0, 0, 0, 0);">
-    <h1 style="text-align: center;padding-bottom: 20px;">Outreach Team</h1>
-    <div class="row justify-content-center" style="padding-left: 7vw;padding-right: 7vw;">
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="our-team">
-                <div class="picture">
-                    <img class="img-fluid" src="images/user1.jpg">
-                </div>
-                <div class="team-content">
-                    <h3 class="name">Patricia Knott</h3>
-                    <h4 class="title">Web Developer</h4>
-                </div>
-                <ul class="social">
-                  <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="our-team">
-                <div class="picture">
-                    <img class="img-fluid" src="images/user2.jpg">
-                </div>
-                <div class="team-content">
-                    <h3 class="name">Justin Ramos</h3>
-                    <h4 class="title">Web Developer</h4>
-                </div>
-                <ul class="social">
-                  <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="our-team">
-                <div class="picture">
-                    <img class="img-fluid" src="images/user3.jpg">
-                </div>
-                <div class="team-content">
-                    <h3 class="name">Mary Huntley</h3>
-                    <h4 class="title">Web Developer</h4>
-                </div>
-                <ul class="social">
-                  <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="our-team">
-                <div class="picture">
-                    <img class="img-fluid" src="images/user2.jpg">
-                </div>
-                <div class="team-content">
-                    <h3 class="name">Michele Miller</h3>
-                    <h4 class="title">Web Developer</h4>
-                </div>
-                <ul class="social">
-                  <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="our-team">
-                <div class="picture">
-                    <img class="img-fluid" src="images/user1.jpg">
-                </div>
-                <div class="team-content">
-                    <h3 class="name">Patricia Knott</h3>
-                    <h4 class="title">Web Developer</h4>
-                </div>
-                <ul class="social">
-                  <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="our-team">
-                <div class="picture">
-                    <img class="img-fluid" src="images/user2.jpg">
-                </div>
-                <div class="team-content">
-                    <h3 class="name">Justin Ramos</h3>
-                    <h4 class="title">Web Developer</h4>
-                </div>
-                <ul class="social">
-                  <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="our-team">
-                <div class="picture">
-                    <img class="img-fluid" src="images/user3.jpg">
-                </div>
-                <div class="team-content">
-                    <h3 class="name">Mary Huntley</h3>
-                    <h4 class="title">Web Developer</h4>
-                </div>
-                <ul class="social">
-                  <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="our-team">
-                <div class="picture">
-                    <img class="img-fluid" src="images/user3.jpg">
-                </div>
-                <div class="team-content">
-                    <h3 class="name">Mary Huntley</h3>
-                    <h4 class="title">Web Developer</h4>
-                </div>
-                <ul class="social">
-                  <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
-                  <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
-                </ul>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=0.8"><title>SEDS-VITAP</title> <script src="jquery-1.11.3.min.js"></script> <script src="js/bootstrap.min.js"></script> <link rel="icon" href="images/logo (2).png"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="css/bootstrap.min.css"><link rel="stylesheet" href="main.css"><link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'><style>*{-webkit-animation:fadein 2s;-moz-animation:fadein 2s;-ms-animation:fadein 2s;-o-animation:fadein 2s;animation:fadein 2s}@keyframes fadein{from{opacity:0}to{opacity:1}}@-moz-keyframes fadein{from{opacity:0}to{opacity:1}}@-webkit-keyframes fadein{from{opacity:0}to{opacity:1}}@-ms-keyframes fadein{from{opacity:0}to{opacity:1}}@-o-keyframes fadein{from{opacity:0}to{opacity:1}}</style></head><body style="background: rgba(0, 0, 0, 0);"><h1 style="text-align: center;padding-bottom: 20px;">Outreach Team</h1><div class="row justify-content-center" style="padding-left: 7vw;padding-right: 7vw;"><div class="col-12 col-sm-6 col-md-4 col-lg-3"><div class="our-team"><div class="picture"> <img class="img-fluid" src="images/user1.jpg"></div><div class="team-content"><h3 class="name">Patricia Knott</h3><h4 class="title">Web Developer</h4></div><ul class="social"> <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a> <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a> <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a> <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a></ul></div></div><div class="col-12 col-sm-6 col-md-4 col-lg-3"><div class="our-team"><div class="picture"> <img class="img-fluid" src="images/user2.jpg"></div><div class="team-content"><h3 class="name">Justin Ramos</h3><h4 class="title">Web Developer</h4></div><ul class="social"> <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a> <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a> <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a> <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a></ul></div></div><div class="col-12 col-sm-6 col-md-4 col-lg-3"><div class="our-team"><div class="picture"> <img class="img-fluid" src="images/user3.jpg"></div><div class="team-content"><h3 class="name">Mary Huntley</h3><h4 class="title">Web Developer</h4></div><ul class="social"> <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a> <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a> <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a> <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a></ul></div></div><div class="col-12 col-sm-6 col-md-4 col-lg-3"><div class="our-team"><div class="picture"> <img class="img-fluid" src="images/user2.jpg"></div><div class="team-content"><h3 class="name">Michele Miller</h3><h4 class="title">Web Developer</h4></div><ul class="social"> <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a> <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a> <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a> <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a></ul></div></div><div class="col-12 col-sm-6 col-md-4 col-lg-3"><div class="our-team"><div class="picture"> <img class="img-fluid" src="images/user1.jpg"></div><div class="team-content"><h3 class="name">Patricia Knott</h3><h4 class="title">Web Developer</h4></div><ul class="social"> <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a> <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a> <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a> <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a></ul></div></div><div class="col-12 col-sm-6 col-md-4 col-lg-3"><div class="our-team"><div class="picture"> <img class="img-fluid" src="images/user2.jpg"></div><div class="team-content"><h3 class="name">Justin Ramos</h3><h4 class="title">Web Developer</h4></div><ul class="social"> <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a> <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a> <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a> <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a></ul></div></div><div class="col-12 col-sm-6 col-md-4 col-lg-3"><div class="our-team"><div class="picture"> <img class="img-fluid" src="images/user3.jpg"></div><div class="team-content"><h3 class="name">Mary Huntley</h3><h4 class="title">Web Developer</h4></div><ul class="social"> <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a> <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a> <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a> <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a></ul></div></div><div class="col-12 col-sm-6 col-md-4 col-lg-3"><div class="our-team"><div class="picture"> <img class="img-fluid" src="images/user3.jpg"></div><div class="team-content"><h3 class="name">Mary Huntley</h3><h4 class="title">Web Developer</h4></div><ul class="social"> <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a> <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a> <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a> <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a></ul></div></div></div></body></html>
