--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="bootstrap.min.css">
         <link rel="stylesheet" href="index.css">
+        <link rel="prerender" href="home.html">
+        <link rel="prerender" href="education.html">
+        <link rel="prerender" href="skills.html">
+        <link rel="prerender" href="internships.html">
+        <link rel="prerender" href="trainings.html">
+        <link rel="prerender" href="projects.html">
     </head>
     <body>
         <div class="container-fluid" id="container0">
@@ -25,23 +31,23 @@
               </div>
               <div class="collapse navbar-collapse justify-content-center order-2" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                  <li class="nav-item active" id="ahome">
+                    <button class="nav-link" onclick="return(showhome())">Home</button>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="education.html">Education</a>
+                  <li class="nav-item" id="aedu">
+                    <a class="nav-link" onclick="return(showeducation())">Education</a>
                   </li>
-                  <li class="nav-item ">
-                    <a class="nav-link" href="skills.html">Skills</a>
+                  <li class="nav-item " id="aski">
+                    <a class="nav-link" onclick="return(showskills())">Skills</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="internships.html">Internships</a>
+                  <li class="nav-item" id="aint">
+                    <a class="nav-link" onclick="return(showinternships())">Internships</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="projects.html">Projects</a>
+                  <li class="nav-item" id="apro">
+                    <a class="nav-link" onclick="return(showprojects())">Projects</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="trainings.html">Trainings</a>
+                  <li class="nav-item" id="atra">
+                    <a class="nav-link" onclick="return(showtrainings())">Trainings</a>
                   </li>
                   
                 </ul>
@@ -55,14 +61,13 @@
             </nav>
           </div>
           <div class="contanier-fluid" id="container1">
-            <div class="jumbotron">
-                <img src="images/me.jpg" class="img-fluid hovering" height="250px" width="250px" style="border-radius:125px;margin-bottom: 15px;">
-                <h1 class="display-4">C Bindhu Madhava Varma</h1>
-                <p class="lead">Student at VIT_Vellore Institute of Technology, Amaravati.</p>
-                <p>I am currently a student at VIT AP pursuing my Bachelor's degree in CSE specialization in Data Analytics. I love programming and currently working as a software team member at SEDS-Projects VIT. I like exploring
-                    about new technologies and learning new programming languages. </p>
-              </div>
+            <iframe id="idIframe" onload="iframeLoaded()" src="home.html" scrolling="no" height="100%" width="100%" style="border:none"></iframe>
           </div>
+
+
+
+
+
           <footer class="new_footer_area">
             <div class="new_footer_top" style="margin: 0 auto;width: 75vw;">
                 <div class="container">
@@ -99,4 +104,69 @@
             </div>
           </footer>
     </body>
+    <script type="text/javascript">
+      function iframeLoaded() {
+      var iFrameID = document.getElementById('idIframe');
+      if (iFrameID) {
+        iFrameID.height = "";
+        iFrameID.height = iFrameID.contentWindow.document.body.scrollHeight + "px";
+      }
+    }
+    function showhome(){
+      document.getElementById("container1").innerHTML='<iframe id="idIframe" onload="iframeLoaded()" scrolling="no" src="home.html" height="100%" width="100%" style="border:none"></iframe>';
+      document.getElementById("ahome").classList.add("active");
+      document.getElementById("aedu").classList.remove("active");
+      document.getElementById("aski").classList.remove("active");
+      document.getElementById("aint").classList.remove("active");
+      document.getElementById("apro").classList.remove("active");
+      document.getElementById("atra").classList.remove("active");
+
+    }
+    function showeducation(){
+      document.getElementById("container1").innerHTML='<iframe id="idIframe" onload="iframeLoaded()" scrolling="no" src="education.html" height="100%" width="100%" style="border:none"></iframe>';
+      document.getElementById("aedu").classList.add("active");
+      document.getElementById("ahome").classList.remove("active");
+      document.getElementById("aski").classList.remove("active");
+      document.getElementById("aint").classList.remove("active");
+      document.getElementById("apro").classList.remove("active");
+      document.getElementById("atra").classList.remove("active");
+    }
+    function showskills(){
+      document.getElementById("container1").innerHTML='<iframe id="idIframe" onload="iframeLoaded()" scrolling="no" src="skills.html" height="100%" width="100%" style="border:none"></iframe>';
+      document.getElementById("aski").classList.add("active");
+      document.getElementById("aedu").classList.remove("active");
+      document.getElementById("ahome").classList.remove("active");
+      document.getElementById("aint").classList.remove("active");
+      document.getElementById("apro").classList.remove("active");
+      document.getElementById("atra").classList.remove("active");
+    }
+    function showinternships(){
+      document.getElementById("container1").innerHTML='<iframe id="idIframe" onload="iframeLoaded()" scrolling="no" src="internships.html" height="100%" width="100%" style="border:none"></iframe>';
+      document.getElementById("aint").classList.add("active");
+      document.getElementById("aedu").classList.remove("active");
+      document.getElementById("aski").classList.remove("active");
+      document.getElementById("ahome").classList.remove("active");
+      document.getElementById("apro").classList.remove("active");
+      document.getElementById("atra").classList.remove("active");
+    }
+    function showprojects(){
+      document.getElementById("container1").innerHTML='<iframe id="idIframe" onload="iframeLoaded()" scrolling="no" src="projects.html" height="100%" width="100%" style="border:none"></iframe>';
+      document.getElementById("apro").classList.add("active");
+      document.getElementById("aedu").classList.remove("active");
+      document.getElementById("aski").classList.remove("active");
+      document.getElementById("aint").classList.remove("active");
+      document.getElementById("ahome").classList.remove("active");
+      document.getElementById("atra").classList.remove("active");
+    }
+    function showtrainings(){
+      document.getElementById("container1").innerHTML='<iframe id="idIframe" onload="iframeLoaded()" scrolling="no" src="trainings.html" height="100%" width="100%" style="border:none"></iframe>';
+      document.getElementById("atra").classList.add("active");
+      document.getElementById("aedu").classList.remove("active");
+      document.getElementById("aski").classList.remove("active");
+      document.getElementById("aint").classList.remove("active");
+      document.getElementById("apro").classList.remove("active");
+      document.getElementById("ahome").classList.remove("active");
+    }
+    
+    </script>
 </html>
