--- a/resume/index.html
+++ b/resume/index.html
@@ -248,7 +248,7 @@
                     </div>
                     <div style="min-height: 300px;"></div>
                     <div>
-                        <h3><i class="fas fa-certificate"></i> Trainings</h3>
+                        <h3><i class="fas fa-certificate"></i> Certifications</h3>
                         <hr class="whitehr">
                         <div class="row">
                             <div style="margin-top: 8px;" class="col-md-6">
@@ -365,11 +365,10 @@
             <div class="col-md-8 main">
                 <h1 style="font-weight: bold;">Bindhu Madhava Varma Chamarthi</h1>
                 <hr>
-                <h5 style="font-weight: 600;">Student at VIT_Vellore Institute of Technology, Amaravati.</h5>
                 <div> I am currently a student at VIT AP pursuing my Bachelor's degree in CSE specialization in Data Analytics. I love programming and currently working as a software team member at SEDS-Projects VIT. I like exploring about new technologies
                     and learning new programming languages.</div>
                 <hr class="blackhr">
-                <h1 style="font-weight: bold;margin-top: 40px;"><i class="fas fa-award"></i> Eduction Details</h1>
+                <h1 style="font-weight: bold;margin-top: 25px;"><i class="fas fa-award"></i> Eduction Details</h1>
                 <hr>
                 <div>
                     <div style="margin-top:20px;">
@@ -392,15 +391,14 @@
                     </div>
                 </div>
                 <hr class="blackhr">
-                <h1 style="font-weight: bold;margin-top: 40px;"><i class="fas fa-project-diagram"></i> Projects</h1>
+                <h1 style="font-weight: bold;margin-top: 25px;"><i class="fas fa-project-diagram"></i> Projects</h1>
                 <hr>
                 <div class="project" style="margin-top: 50px;">
                     <div class="description">
                         <div class="title">SEDS Website</div>
                         <div class="link"><a target="_blank" href="https://sedsvitap.in/">https://sedsvitap.in/</a></div>
                         <p>
-                            I am a software team member at one of our university club named SEDS(Students for Explorations and Development of Space). As part of this role I was given a project to develop a website for our club and I did my best to do the job. Check out the website
-                            at the given link.
+                            I am a software team member at one of our university club named SEDS(Students for Explorations and Development of Space). As part of this role I was given a project to develop a website for our club and I did my best to do the job.
                         </p>
                     </div>
                 </div>
@@ -409,21 +407,21 @@
                         <div class="title">SEDS-HUNT</div>
                         <div class="link"><a target="_blank" href="https://sedsvitap.in/hunt">https://sedsvitap.in/hunt</a></div>
                         <p>
-                            We hosted an online treasure hunt at our university club SEDS and we developed our own website to host this competition. The website has a lot features starting from registrations to live dashboard which shows live scores and positions of all the participants.
-                            Check out the website at the given link.
+                            We hosted an online treasure hunt at SEDS and we developed our own website to host this competition. The website has a lot features starting from registrations to live scoreboard.
                         </p>
                     </div>
                 </div>
-                <div style="min-height: 160px;"></div>
+
                 <div class="project">
                     <div class="description">
                         <div class="title">Agastya Careers</div>
                         <div class="link"><a target="_blank" href="https://agastyacareers.com/">https://agastyacareers.com</a></div>
                         <p>
-                            Agastya Careers is a private company that provides career trainings to freshers. I got the project of developing a landing page for the company and I did my best to do the job. Check out the website at the given link.
+                            Agastya Careers is a private company that provides career trainings to freshers. I got the project of developing a website for the company and I did my best.
                         </p>
                     </div>
                 </div>
+                <div style="min-height:90px;"></div>
                 <div class="project">
                     <div class="description">
                         <div class="title">Boss Buddy</div>
@@ -447,8 +445,7 @@
                         <div class="title">Secure Chat</div>
                         <div class="link"><a target="_blank" href="https://bindhumadhav.in/securechat">https://bindhumadhav.in/securechat</a></div>
                         <p>
-                            Secure Chat is a chatting web application in which the messages sent by users are encrypted using AES algorithm. We made this project as part of our academic course named "Introduction to Cryptography" and implemented the algorithm using PHP. Check out
-                            the website at the given link.
+                            Secure Chat is a chatting web application in which the messages sent by users are encrypted using AES algorithm. We made this project as part of our academic course named "Introduction to Cryptography" and implemented the algorithm using PHP.
                         </p>
                     </div>
                 </div>
@@ -467,7 +464,7 @@
                         <div class="title">Profile Website</div>
                         <div class="link"><a href="index.html">https://bindhumadhavavarma.github.io/</a></div>
                         <p>
-                            I made this page to present all the work that I have been doing since the beginning of my engineering. Hope you like it :)
+                            I made this page to present all the work that I have been doing since the beginning of my engineering.
                         </p>
                     </div>
                 </div>
