--- a/index.html
+++ b/index.html
@@ -21,15 +21,20 @@
 
             <div class="leftMain col-md-3">
                 <div class="inner">
-                    <div class="profilePicWrapper"><img src="images/me.jpg" alt="" class="profilePic" style="margin-bottom:15px;"></div>
+                    <div class="profilePicWrapper"><img src="images/me.jpg" alt="" class="profilePic"
+                            style="margin-bottom:15px;"></div>
                     <div class="mainName">
                         <h1>Bindhu Madhava Varma</h1>
                     </div>
                     <div>
-                        <a target="_blank" href="https://www.facebook.com/bindumadhava.varma/"><i class="fab fa-facebook-f"></i></a>
-                        <a target="_blank" href="mailto:bindhu.19bcd7116@vitap.ac.in"><i class="fas fa-envelope"></i></a>
-                        <a target="_blank" href="https://www.linkedin.com/in/bindhu-madhav-varma-c-58140b1aa/"><i class="fab fa-linkedin-in"></i></a>
-                        <a target="_blank" href="https://github.com/BINDHUMADHAVAVARMA"><i class="fab fa-github"></i></a>
+                        <a target="_blank" href="https://www.facebook.com/bindumadhava.varma/"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a target="_blank" href="mailto:bindhu.19bcd7116@vitap.ac.in"><i
+                                class="fas fa-envelope"></i></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/bindhu-madhav-varma-c-58140b1aa/"><i
+                                class="fab fa-linkedin-in"></i></a>
+                        <a target="_blank" href="https://github.com/BINDHUMADHAVAVARMA"><i
+                                class="fab fa-github"></i></a>
                     </div>
                     <div>
                         <a href="pdfs/Resume.pdf" class="btn btn-primary" download>Download CV</a>
@@ -39,9 +44,83 @@
             </div>
             <div class="rightMain col-md-9 transition-swipeup" id="swup">
                 <div class="homeMain">
-                    <h1 class="homeHeading">Bindhu Madhava Varma</h1>
-                    <div class="homeDesc">Student at VIT_Vellore Institute of Technology, Amaravati.</div>
-                    <div class="homeDesc">I am currently a student at VIT AP pursuing my Bachelor's degree in CSE specialization in Data Analytics. I love programming and currently I am Vice President of SEDS-VIT Club. </div>
+                    <p>
+                    <h1 align="center">Hi 👋, I&#39;m <a href="https://bindhumadhav.in/" target="blank">
+                            Bindhu Madhava Varma</a></h1>
+                    </p>
+                    <h3 align="center">A passionate Software Engineer from Bangalore, India</h3>
+                    <br />
+
+                    <p>
+
+                        <a target="_blank" align="center">
+                            <img align="right" top="500" height="300" width="400" alt="GIF"
+                                src="https://media.giphy.com/media/SWoSkN6DxTszqIKEqv/giphy.gif">
+                        </a>
+                        <br />
+
+                        - 🔭 I’m currently working at <a href="https://shell.com" target="blank">Shell </a> as Associate
+                        Software Engineer
+
+                        - 🌱 I’m currently Working on Azure Integration Technologies (Azure Data Factory, Logic Apps,
+                        Azure Functions, Azure Databricks)
+
+                        - 🤝 I’m available for freelancing.
+
+                        - 🌱 I’m currently learning Azure Integration Technologies
+
+                        - 📫 How to reach me <strong>bindhumadhavavarma@gmail.com</strong>
+
+                        - 📄 Know about my experiences at <a href="https://bindhumadhav.in" target="blank">My Profile
+                            site</a>
+                        <br />
+                    </p>
+
+                    <div id="user-content-toc">
+                        <ul align="center">
+                            <summary>
+                                <h2 style="display: inline-block">Technologies That I Know👨🏻‍💻</h2>
+                            </summary>
+                        </ul>
+                    </div>
+                    <!--tech stack icons-->
+                    <p align="center">
+                        <a href="https://skillicons.dev">
+                            <img
+                                src="https://skillicons.dev/icons?i=androidstudio,azure,bootstrap,c,cs,cloudflare,css,dart,discord,docker,dotnet,express,figma,firebase,flask,flutter,git,github,html,java,js,jquery,mongodb,mysql,nodejs,php,postgres,postman,py,r,react,redux,sass,tailwind,ts,visualstudio,vscode" />
+                        </a>
+                    </p>
+                    <h2 align="center">My Stats 📊</h2>
+                    <p align="center">
+                        <img style="width:46%"
+                            src="https://github-readme-stats.vercel.app/api?username=bindhumadhavavarma&theme=vue-dark&show_icons=true&hide_border=true&count_private=true" />
+                        <img style="width:49%"
+                            src="https://github-readme-streak-stats.herokuapp.com/?user=bindhumadhavavarma&theme=vue-dark&hide_border=true&count_private=true" />
+                    </p>
+                    <p align="center">
+                        <img
+                            src="https://github-readme-stats.vercel.app/api/top-langs/?username=bindhumadhavavarma&theme=vue-dark&show_icons=true&hide_border=true&layout=donut&langs_count=10&count_private=true" />
+                    </p>
+
+
+                    <h3 align="center"> <img src="https://media.giphy.com/media/iY8CRBdQXODJSCERIr/giphy.gif" width="30"
+                            height="30" style="margin-right: 10px;">Connect with me 🤝 </h3>
+
+                    <p align="center">
+
+                    <div align="center" class="icons-social" style="margin-left: 10px;">
+                        <a style="margin-left: 10px;" target="_blank" href="https://www.linkedin.com/in/cbmvarma/">
+                            <img src="https://img.icons8.com/doodle/40/000000/linkedin--v2.png"></a>
+                        <a style="margin-left: 10px;" target="_blank" href="https://github.com/bindhumadhavavarma">
+                            <img src="https://img.icons8.com/doodle/40/000000/github--v1.png"></a>
+                        <a style="margin-left: 10px;" target="_blank" href="https://instagram.com/bindhu_madhav_varma">
+                            <img src="https://img.icons8.com/doodle/40/000000/instagram-new--v2.png"></a>
+                        <a style="margin-left: 5px;" target="_blank" href="https://bindhumadhav.in">
+                            <img src="https://img.icons8.com/dusk/40/000000/domain.png"></a>
+                    </div>
+
+                    </p>
+
                 </div>
 
             </div>
@@ -56,19 +135,25 @@
                 <div class="menuItem" id="mm5"><a href="/trainings.html"><i class="fas fa-award"></i></a></div>
             </div>
             <div class="sideMenu2">
-                <div class="menuItem" id="m1"><a href="/education.html"><i class="fas fa-chevron-right"></i></i></a></div>
-                <div class="menuItem" id="m2"><a href="/trainings.html"><i class="fas fa-chevron-left"></i></i></i></a></div>
+                <div class="menuItem" id="m1"><a href="/education.html"><i class="fas fa-chevron-right"></i></i></a>
+                </div>
+                <div class="menuItem" id="m2"><a href="/trainings.html"><i class="fas fa-chevron-left"></i></i></i></a>
+                </div>
             </div>
             <div class="bottomMenu">
                 <div class="inner row">
                     <div class="menuItem col-sm-2" id="mm0">
                         <a href="/index.html"><i class="fas fa-house-user"></i></a>
                     </div>
-                    <div class="menuItem col-sm-2" id="mm1"><a href="/education.html"><i class="fas fa-graduation-cap"></i></a></div>
+                    <div class="menuItem col-sm-2" id="mm1"><a href="/education.html"><i
+                                class="fas fa-graduation-cap"></i></a></div>
                     <div class="menuItem col-sm-2" id="mm2"><a href="/skills.html"><i class="fas fa-book"></i></a></div>
-                    <div class="menuItem col-sm-2" id="mm3"><a href="/internships.html"><i class="fas fa-briefcase"></i></a></div>
-                    <div class="menuItem col-sm-2" id="mm4"><a href="/projects.html"><i class="fas fa-file-code"></i></a></div>
-                    <div class="menuItem col-sm-2" id="mm5"><a href="/trainings.html"><i class="fas fa-award"></i></a></div>
+                    <div class="menuItem col-sm-2" id="mm3"><a href="/internships.html"><i
+                                class="fas fa-briefcase"></i></a></div>
+                    <div class="menuItem col-sm-2" id="mm4"><a href="/projects.html"><i
+                                class="fas fa-file-code"></i></a></div>
+                    <div class="menuItem col-sm-2" id="mm5"><a href="/trainings.html"><i class="fas fa-award"></i></a>
+                    </div>
                 </div>
 
             </div>
